# deepagenix

./: .env  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  deepagenix.sln  docker-compose.yml  dockerbuild.sh  entrypoint.sh  pyproject.toml
config/: base.yaml  development.yaml
docker/: serverbuild.sh
docker/elasticsearch/: elasticsearch.yml
docker/elasticsearch/plugins/: plugin-install.txt
server/components/python/: Dockerfile  main.py  pyproject.toml
server/configs/: appsettings.Development.yml  appsettings.Production.yml
server/gateway/nginx/: nginx.conf
server/main/: Dockerfile  Program.cs
server/main/Properties/: launchSettings.json
server/services/admin/: AdminExtension.cs
server/services/common/: CommonExtension.cs  SnowflakeId.cs
server/services/knowledge/: knowledge.csproj
src/chat_bi/datasource/: __init__.py  datasource_service.py  factory.py
src/common/: config.py  snowflakeId.py
src/common/cache/: base.py  cache_factory.py  memory.py  redis.py
src/common/models/: base.py
src/components/python/: Dockerfile  main.py  pyproject.toml
src/components/python/common/: consul.py
src/configs/: appsettings.Development.yml  appsettings.Production.yml  appsettings.yml  model.yml
src/core/: Dockerfile  Program.cs  core.csproj
src/core/Extensions/: ConfigurationExtension.cs  Consul.cs  IpAddress.cs
src/foundation/: openai_client.py
src/foundation/load_balancer/: base.py
src/foundation/model/: models.py  selector.py  usage.py
src/foundation/models/: base.py  crud.py  model.py
src/gateway/nginx-upsync/: Dockerfile  nginx.conf
src/main/: Dockerfile  Program.cs  main.csproj
src/services/admin/: admin.csproj
src/services/common/: CommonExtension.cs  common.csproj
src/services/knowledge/: KnowledgeExtension.cs
tests/: test_cache.py  test_config.py  test_load_balancer.py
tests/benchmarks/common/: snowflakeId.py
tests/unittests/common/: cache.py  (+1 more)
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: main.tsx  routeTree.gen.ts
(+129 files in other folders)
