[tool.poetry]
name = "ai-platform"
version = "0.1.0"
description = "Modular AI platform with RAG and Foundation modules"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.6"
python-jose = "^3.3.0"
passlib = "^1.7.4"
pyyaml = "^6.0.1"
alembic = "^1.12.1"
prometheus-client = "^0.18.0"
celery = "^5.3.4"
redis = "^4.6.0"
sqlalchemy = "^2.0.23"
sqlmodel = "^0.0.22"
pgbouncer = "^0.1.0"
dotty-dict = "^1.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
httpx = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
