[tool.poetry]
name = "deepagenix"
version = "0.1.0"
description = "Deep Agenix"
authors = ["Shapman Lv <shapmanlv@outlook.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.6"
python-jose = "^3.3.0"
passlib = "^1.7.4"
pyyaml = "^6.0.1"
alembic = "^1.12.1"
celery = "^5.3.4"
redis = "^4.6.0"
sqlalchemy = "^2.0.23"
sqlmodel = "^0.0.22"
pgbouncer = "^0.1.0"
psutil = "^7.0.0"
fasteners = "^0.19"
atomics = "^1.0.3"
openai = "^1.65.2"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
httpx = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
